# Ai-resume-builder-

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 16009aeeb3f9_add_resume_exports.py  42d7cd6bd744_create_resume_import_session.py  4fc2755c36e3_add_analysis_scoring_fields.py  5aa03538973b_phase5_foundation.py  5ee97271c4f8_add_resume_claim.py  7f2082ad83ae_phase15_career_intelligence.py  976202c6c2bc_create_evidence_audits_and_columns.py  a37282f03a79_update_ai_suggestion_and_evidence_models.py  b3d36b801a2c_create_career_entry.py  e3844a5eacc5_add_jd_matching_fields.py
backend/app/: main.py  middleware.py
backend/app/ai/: factory.py  gemini_provider.py  openai_provider.py  provider.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  deps.py  exceptions.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_analytics.py  test_applications.py  test_auth.py  test_career_entry.py  test_cover_letters.py  test_db_foundation.py  test_evidence.py  test_evidence_harden.py  test_exports.py  test_hardening.py  test_interview_sessions.py  test_job_matching.py  test_notifications.py  test_recruiter.py  test_resume_crud.py  test_resume_imports.py  test_resume_tailor.py  test_scoring_engine.py  test_suggestions.py
backend/uploads/: .gitkeep
(+236 files in other folders)
